--- a/style.css
+++ b/style.css
@@ -1,19 +1,75 @@
-header{
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
+
+#bemutat{
     text-align: center;
-    font-size: x-large;
+    justify-content: center;
+    font-family: "Jersey 25", sans-serif !important;
+    font-weight: 100;
+    font-style: italic;
+    font-size: 8vh !important;
 }
+
 main{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    position: fixed;
+    width: auto;
+    
+
+
+    
 }
-a{
-    text-decoration: none;
-    color: black;
-    border-radius: 10%;
-    background-color: blanchedalmond;
-    padding: .5rem;
-    font-size: large;
+#a1szv{
+    text-decoration: none !important;
+    color: black !important;
+    /*border-radius: 50% !important;
+    background-color: rgb(230, 11, 11) !important;*/
+    padding: .5rem !important;
+    font-size: 5vh !important;
+    animation: blink 1.5s infinite; /* A "blink" animáció alkalmazása a gombra */
+    font-family: "Jersey 10 Charted", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    justify-content: center !important;
+
+}
+.jatek-start {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 4vh;
+    left: 50%;
+    transform: translateX(-50%);
+}
+body{
+    overflow: hidden;
+}
+/*Gomb villogasa*/
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+}
+/**/
+
+.card-img-top {
+    max-width: 50vh !important;
+    max-height: 45vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.row{
+    justify-content: center;
+    align-items: center;
+    margin-top: -25vh !important;
+    
 }
