--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
 
-#bemutat{
+#page-logo{
     text-align: center;
     justify-content: center;
     font-family: "Jersey 25", sans-serif !important;
@@ -9,6 +9,43 @@
     font-style: italic;
     font-size: 8vh !important;
 }
+.logo-container {
+	position: relative;
+	
+	&:before {
+		content:  "";
+		position: absolute;
+		top:      calc( 100% - 2px );
+		width:    100%;
+		height:   4px;
+		background-color: #cf0000;
+		transform-origin: center center;
+		transform: scaleX( 0 );
+		
+		animation: line-animation 3s ease forwards;
+	}
+	
+	h1#page-logo {
+		font: bold 6rem 'Arial', sans-serif;
+		
+		animation: clip-path-reveal-1 3s ease forwards;
+	}
+}
+
+@keyframes line-animation {
+	0% { transform: scaleX( 0 ); }
+	15% { transform: scaleX( 0 ); }
+	20%, 25% { transform: scaleX( 1 ); top: calc( 100% - 2px ); }
+	50% { transform: scaleX( 1 ); top: 0px; }
+	70% { transform: scaleX( 0.2 ); top: 0px; }
+	80%, 100% { transform: scaleX( 0.2 ); top: 0px; }
+}
+
+@keyframes clip-path-reveal-1 {
+	0%, 25% { clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); }
+	50% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); }
+}
+
 
 main{
     display: flex;
@@ -26,9 +63,9 @@ main{
     color: black !important;
     /*border-radius: 50% !important;
     background-color: rgb(230, 11, 11) !important;*/
-    padding: .5rem !important;
+    padding: 1.5rem !important;
     font-size: 5vh !important;
-    animation: blink 1.5s infinite; /* A "blink" animáció alkalmazása a gombra */
+    animation: blink 1.5s infinite; /*animacio*/
     font-family: "Jersey 10 Charted", sans-serif;
     font-weight: 300;
     font-style: normal;
@@ -45,6 +82,7 @@ main{
 }
 body{
     overflow: hidden;
+    background-color: #8a858593;
 }
 /*Gomb villogasa*/
 @keyframes blink {
@@ -71,5 +109,6 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: -25vh !important;
+    
     
 }
