--- a/game.css
+++ b/game.css
@@ -1,9 +1,146 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
+
+.text-copy{
+    fill: none;
+    stroke: rgb(56, 15, 15);
+    stroke-dasharray: 6% 29%;
+    stroke-width: 3px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+    margin-top: 0;
+    top: 0;
+    
+}
+.logo-container {
+	position: relative;
+	
+	&:before {
+		content:  "";
+		position: absolute;
+		top:      calc( 100% - 2px );
+		width:    100%;
+		height:   4px;
+		background-color: #cf0000;
+		transform-origin: center center;
+		transform: scaleX( 0 );	
+		animation: line-animation 3s ease forwards;
+        
+	}
+	
+	h1#page-logo {
+		font: bold 5rem 'Arial', sans-serif;
+        top: 0;
+		animation: clip-path-reveal-1 3s ease forwards;
+	}
+}
+.text-copy:nth-child(1){
+	stroke: #4D163D;
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: #840037;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #BD0034;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #BD0034;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #FDB731;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
+}
+
+
+
+@keyframes line-animation {
+	0% { transform: scaleX( 0 ); }
+	15% { transform: scaleX( 0 ); }
+	20%, 25% { transform: scaleX( 1 ); top: calc( 100% - 2px ); }
+	50% { transform: scaleX( 1 ); top: 0px; }
+	70% { transform: scaleX( 0.2 ); top: 0px; }
+	80%, 100% { transform: scaleX(none); top: 0px; }
+}
+
+@keyframes clip-path-reveal-1 {
+	0%, 25% { clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); }
+	50% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); }
+}
+
+
 main{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: auto;  
+    width: auto;
+
+}
+#a1szv{
+    text-decoration: none !important;
+    color: black !important;
+    /*border-radius: 50% !important;
+    background-color: rgb(230, 11, 11) !important;*/
+    padding: 1.5rem !important;
+    font-size: 5vh !important;
+    animation: blink 1.5s infinite; /*animacio*/
+    font-family: "Jersey 10 Charted", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    justify-content: center !important;
+
+}
+.jatek-start {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 4vh;
+    left: 50%;
+    transform: translateX(-50%);
+}
+body{
+    overflow: hidden;
+    background-color: #8a858593;
+}
+/*Gomb villogasa*/
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+}
+/**/
+
+.card-img-top {
+    max-width: 50vh !important;
+    max-height: 45vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.row{
+    justify-content: center;
+    align-items: center;
+    margin-top: -25vh !important;
+    
+    
 }
 .box{
     height: 10vh;
@@ -18,3 +155,4 @@ main{
     transition: scale .3s;
     border-radius: 10px;
 }
+
