--- a/game.css
+++ b/game.css
@@ -79,15 +79,6 @@
 	50% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); }
 }
 
-
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: auto;
-
-}
 #a1szv{
     text-decoration: none !important;
     color: black !important;
@@ -142,17 +133,18 @@ body{
     
     
 }
-.box{
-    height: 10vh;
-    width: 10vh;
-    box-shadow: 0 0 10px 1px #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 3rem;
-    font-weight: bold;
-    scale:1;
-    transition: scale .3s;
-    border-radius: 10px;
+.container{ 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 1px; 
+    width: 50px;
 }
-
+.box{
+    background-color: #ccc;
+    border: 1px solid black;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    line-height: 50px;
+}
