--- a/game.css
+++ b/game.css
@@ -14,6 +14,7 @@
 }
 .logo-container {
 	position: relative;
+    margin-bottom: -0.8vh;
 	
 	&:before {
 		content:  "";
@@ -139,6 +140,8 @@ body{
     grid-template-rows: repeat(4, 1fr);
     gap: 1px; 
     width: 50px;
+    justify-content: center;
+    
 }
 .box{
     background-color: #ccc;
@@ -147,4 +150,9 @@ body{
     width: 50px;
     text-align: center;
     line-height: 50px;
+}
+.Buttons{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
