--- a/game.css
+++ b/game.css
@@ -1,17 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
 
-#page-logo{
-    text-align: center;
-    justify-content: center;
-    font-family: "Jersey 25", sans-serif !important;
-    font-weight: 100;
-    font-style: italic;
-    font-size: 8vh !important;
+.text-copy{
+    fill: none;
+    stroke: rgb(56, 15, 15);
+    stroke-dasharray: 6% 29%;
+    stroke-width: 3px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+    margin-top: 0;
+    top: 0;
+    
 }
 .logo-container {
 	position: relative;
-	
+    margin-bottom: -0.8vh;
+   
 	&:before {
 		content:  "";
 		position: absolute;
@@ -20,17 +24,47 @@
 		height:   4px;
 		background-color: #cf0000;
 		transform-origin: center center;
-		transform: scaleX( 0 );
-		
+		transform: scaleX( 0 );	
 		animation: line-animation 3s ease forwards;
+        
 	}
 	
 	h1#page-logo {
-		font: bold 6rem 'Arial', sans-serif;
-		
+		font: bold 5rem 'Arial', sans-serif;
+        top: 0;
 		animation: clip-path-reveal-1 3s ease forwards;
 	}
 }
+.text-copy:nth-child(1){
+	stroke: #4D163D;
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: #840037;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #BD0034;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #BD0034;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #FDB731;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
+}
+
+
 
 @keyframes line-animation {
 	0% { transform: scaleX( 0 ); }
@@ -38,7 +72,7 @@
 	20%, 25% { transform: scaleX( 1 ); top: calc( 100% - 2px ); }
 	50% { transform: scaleX( 1 ); top: 0px; }
 	70% { transform: scaleX( 0.2 ); top: 0px; }
-	80%, 100% { transform: scaleX( 0.2 ); top: 0px; }
+	80%, 100% { transform: scaleX(none); top: 0px; }
 }
 
 @keyframes clip-path-reveal-1 {
@@ -46,18 +80,6 @@
 	50% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); }
 }
 
-
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: auto;
-    
-
-
-    
-}
 #a1szv{
     text-decoration: none !important;
     color: black !important;
@@ -124,13 +146,125 @@ body{
 .box{
     background-color: #ccc;
     border: 1px solid black;
-    height: 50px;
-    width: 50px;
-    text-align: center;
+    height: 80px;
+    width: 80px;
+    text-align: center !important;
     line-height: 50px;
-}
-.Buttons{
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+
 }
+.Buttons{ 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center;
+    font-size: 11vh;
+    width: 43vh;
+    height: 43vh;
+    margin-top: -34vh;
+    margin-left: 15vh;
+}
+.Buttons, a{
+    text-decoration: none;
+
+}
+/*vissza button*/
+
+.button {
+    display: block;
+    background-color: #c0392b;
+    width: 300px;
+    height: 100px;
+    line-height: 100px;
+    margin: auto;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    bottom: 80vh;
+    left: 0;
+    right: 160vh;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+    transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4);
+    z-index: 1;
+    font-family: "Jersey 25", sans-serif !important;
+    font-weight: 100;
+    font-style: normal;
+    
+    
+    
+  }
+ 
+  .button span,
+  .button .icon {
+    display: block;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    top: 0;
+  }
+  .button span {
+    width: 72%;
+    line-height: inherit;
+    font-size: 22px;
+    text-transform: uppercase;
+    left: 0;
+    transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4);
+  }
+  .button span:after {
+    content: "";
+    background-color: #a53125;
+    width: 2px;
+    height: 70%;
+    position: absolute;
+    top: 15%;
+    right: -1px;
+  }
+  .button .icon {
+    width: 28%;
+    right: 0;
+    transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4);
+  }
+  .button .icon .fa {
+    font-size: 30px;
+    vertical-align: middle;
+    transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4), height 0.25s ease;
+  }
+  .button .icon .fa-remove {
+    height: 36px;
+  }
+  .button .icon .fa-check {
+    display: none;
+  }
+  .button.success span, .button:hover span {
+    left: -72%;
+    opacity: 0;
+  }
+  .button.success .icon, .button:hover .icon {
+    width: 100%;
+  }
+  .button.success .icon .fa, .button:hover .icon .fa {
+    font-size: 45px;
+  }
+  .button.success {
+    background-color: #27ae60;
+  }
+  .button.success .icon .fa-remove {
+    display: none;
+  }
+  .button.success .icon .fa-check {
+    display: inline-block;
+  }
+  .button:hover {
+    opacity: 0.9;
+  }
+  .button:hover .icon .fa-remove {
+    height: 46px;
+  }
+  .button:active {
+    opacity: 1;
+  }
+
