--- a/game.css
+++ b/game.css
@@ -143,7 +143,7 @@ body{
     justify-content: center;
     
 }
-.box{
+.box,.boxEmpty{
     background-color: #ccc;
     border: 1px solid black;
     height: 80px;
