--- a/game.css
+++ b/game.css
@@ -8,15 +8,15 @@
     stroke-width: 3px;
     stroke-dashoffset: 0%;
     animation: stroke-offset 5.5s infinite linear;
-    margin-top: -10vh;
+    margin-top: -5vh;
     
     
     
 }
 .logo-container {
 	position: relative;
-    
-    height: 50vh;
+    margin-bottom: -15vh;
+    height: 60vh;
    
 	&:before {
 		content:  "";
