--- a/game.css
+++ b/game.css
@@ -1,313 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
-
-.text-copy{
-    fill: none;
-    stroke: rgb(56, 15, 15);
-    stroke-dasharray: 6% 29%;
-    stroke-width: 3px;
-    stroke-dashoffset: 0%;
-    animation: stroke-offset 5.5s infinite linear;
-    margin-top: -5vh;
-    
-    
-    
-}
-.logo-container {
-	position: relative;
-    margin-bottom: -15vh;
-    height: 60vh;
-   
-	&:before {
-		content:  "";
-		position: absolute;
-		top:      calc( 100% - 12vh );
-		width:    100%;
-		height:   4px;
-		background-color: #cf0000;
-		transform-origin: center center;
-		transform: scaleX( 0 );	
-		animation: line-animation 3s ease forwards;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="game.css">
+    <script src="app.js" defer></script>
+    <title>Tilitoli Játék</title>
+</head>
+<body>
+    <!-- /Vissza button*/ -->
+    <a class="button" href="./index.html" role="button">
+        <span>Kilépés</span>
+        <div class="icon">
+          <i class="fa fa-remove" style="font-style: normal">ᐊ</i>
+          <i class="fa fa-check"></i>
+        </div>
+      </a>
+    <header>
         
-	}
-	
-	h1#page-logo {
-		font: bold 5rem 'Arial', sans-serif;
-        top: 0;
-		animation: clip-path-reveal-1 3s ease forwards;
-	}
-}
+          <!-- /*Vissza button vége*/ -->
+        <div class="logo-container">
+            <h1 id="page-logo">
+                <div class="text-copy">
+                    <svg viewBox="0 0 960 300">
+                        <symbol id="s-text">
+                            <text text-anchor="middle" x="40%" y="50%">TiliToli</text>
+                        <text text-anchor="middle" x="60%" y="80%">Játék </text>
+                        
+                        </symbol>
 
-
-.text-copy:nth-child(1){
-	stroke: #4D163D;
-	animation-delay: -1;
-  
-}
-
-.text-copy:nth-child(2){
-	stroke: #840037;
-	animation-delay: -2s;
-}
-
-.text-copy:nth-child(3){
-	stroke: #BD0034;
-	animation-delay: -3s;
-}
-
-.text-copy:nth-child(4){
-	stroke: #BD0034;
-	animation-delay: -4s;
-}
-
-.text-copy:nth-child(5){
-	stroke: #FDB731;
-	animation-delay: -5s;
-}
-
-@keyframes stroke-offset{
-	100% {stroke-dashoffset: -35%;}
-}
-
-
-
-@keyframes line-animation {
-	0% { transform: scaleX( 0 ); }
-	15% { transform: scaleX( 0 ); }
-	20%, 25% { transform: scaleX( 1 ); top: calc( 100% - 2px ); }
-	50% { transform: scaleX( 1 ); top: 0px; }
-	70% { transform: scaleX( 0.2 ); top: 0px; }
-	80%, 100% { transform: scaleX(none); top: 0px; }
-}
-
-@keyframes clip-path-reveal-1 {
-	0%, 25% { clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); }
-	50% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); }
-}
-
-#a1szv{
-    text-decoration: none !important;
-    color: black !important;
-    /*border-radius: 50% !important;
-    background-color: rgb(230, 11, 11) !important;*/
-    padding: 1.5rem !important;
-    font-size: 5vh !important;
-    animation: blink 1.5s infinite; /*animacio*/
-    font-family: "Jersey 10 Charted", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    justify-content: center !important;
-
-}
-.jatek-start {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    bottom: 4vh;
-    left: 50%;
-    transform: translateX(-50%);
-}
-body{
-    overflow: hidden;
-    background-color: #8a858593;
-}
-/*Gomb villogasa*/
-@keyframes blink {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
-    100% { opacity: 1; }
-}
-
-@keyframes blink {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
-    100% { opacity: 1; }
-}
-/**/
-
-.card-img-top {
-    max-width: 50vh !important;
-    max-height: 45vh;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-.row{
-    justify-content: center;
-    align-items: center;
-    margin-top: -25vh !important;
-    
-    
-}
-.container{ 
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 1px; 
-    width: 50px;
-    justify-content: center;
-    color: rgb(255, 255, 255);
-    font-family: "Jersey 25", sans-serif !important;
-    font-weight: 100;
-    font-weight: bold;
-    font-size: 4vh !important;
-    top: 0;
-    
-    
-}
-main{
-  margin-top: 15vh;
-}
-#_{
-    background-color: white;
-}
-.box,.boxEmpty{
-    background-color: #149ebdb0;
-    border: 1px solid black;
-    height: 80px;
-    width: 80px;
-    text-align: center !important;
-    line-height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-
-}
-.Buttons{ 
-    justify-content: center; 
-    align-items: center; 
-    text-align: center;
-    font-size: 11vh;
-    width: 43vh;
-    height: 43vh;
-    margin-top: -34vh;
-    margin-left: 15vh;
-}
-
-/*vissza button*/
-
-.button {
-    display: block;
-    background-color: #c0392b;
-    width: 300px;
-    height: 100px;
-    line-height: 100px;
-    margin: auto;
-    color: #fff;
-    position: absolute;
-    top: 0;
-    bottom: 80vh;
-    left: 0;
-    right: 160vh;
-    cursor: pointer;
-    overflow: hidden;
-    border-radius: 5px;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
-    transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4);
-    z-index: 1;
-    font-family: "Jersey 25", sans-serif !important;
-    font-weight: 100;
-    font-style: normal;
-    
-    
-    
-  }
- 
-  .button span,
-  .button .icon {
-    display: block;
-    height: 100%;
-    text-align: center;
-    position: absolute;
-    top: 0;
-  }
-  .button span {
-    width: 72%;
-    line-height: inherit;
-    font-size: 22px;
-    text-transform: uppercase;
-    left: 0;
-    transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4);
-  }
-  .button span:after {
-    content: "";
-    background-color: #a53125;
-    width: 2px;
-    height: 70%;
-    position: absolute;
-    top: 15%;
-    right: -1px;
-  }
-  .button .icon {
-    width: 28%;
-    right: 0;
-    transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4);
-  }
-  .button .icon .fa {
-    font-size: 30px;
-    vertical-align: middle;
-    transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4), height 0.25s ease;
-  }
-  .button .icon .fa-remove {
-    height: 36px;
-  }
-  .button .icon .fa-check {
-    display: none;
-  }
-  .button.success span, .button:hover span {
-    left: -72%;
-    opacity: 0;
-  }
-  .button.success .icon, .button:hover .icon {
-    width: 100%;
-  }
-  .button.success .icon .fa, .button:hover .icon .fa {
-    font-size: 45px;
-  }
-  .button.success {
-    background-color: #27ae60;
-  }
-  .button.success .icon .fa-remove {
-    display: none;
-  }
-  .button.success .icon .fa-check {
-    display: inline-block;
-  }
-  .button:hover {
-    opacity: 0.9;
-  }
-  .button:hover .icon .fa-remove {
-    height: 46px;
-  }
-  .button:active {
-    opacity: 1;
-  }
-
-
-  .shuffle {
-    position: absolute;
-    font-family: sans-serif;
-    text-decoration: none;
-    border-radius: 1000px;
-    border: 1px solid #5846ff;
-    height: 8vh;
-    width: 10vh;
-    transition: all cubic-bezier(0.31, -0.105, 0.43, 1.4) 0.2s;
-    background-color: #6252f9;
-    margin-left: 50vh;
-    margin-top: -10vh;
-    font-size: 5vh;
-    
-  }
-  .shuffle:hover {
-    width: 135px;
-  }
-  .shuffle:hover .btn-stage:first-child {
-    opacity: 0;
-  }
-  .shuffle:hover .btn-stage:nth-child(n+2) {
-    opacity: 1;
-    transition: opacity linear calc(0.2s + 0.05s);
-  }
-  
+                        <g class = "g-ants">
+                        
+                            <use xlink:href="#s-text" class="text-copy"></use>
+                            <use xlink:href="#s-text" class="text-copy"></use>
+                            <use xlink:href="#s-text" class="text-copy"></use>
+                            <use xlink:href="#s-text" class="text-copy" id="szoveg"></use>
+                        </g>
+                    </svg>
+                </div>
+            </h1>
+        </div>
+    </header>
+    <main>
+        <div class="gradient-border">
+            <div class="container">
+                <div class="boxEmpty" id="_"></div>
+            
+            </div>
+            <button class="shuffle">⟳</a>
+        </div>
+    </main>
+</body>
+</html>
