--- a/style.css
+++ b/style.css
@@ -112,3 +112,16 @@ body{
     
     
 }
+.card{
+    height: 60vh;
+}
+@media only screen and (max-width: 1440px) {
+    .card {
+        height: 70vh;
+    }
+}
+@media only screen and (max-width: 1280px) {
+    .card {
+        height: 60vh;
+    }
+}
