--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body{
 /**/
 
 .card-img-top {
-    max-width: 50vh !important;
+    max-width: 50vh ;
     max-height: 45vh;
     justify-content: center;
     align-items: center;
@@ -114,14 +114,64 @@ body{
 }
 .card{
     height: 60vh;
+    
 }
 @media only screen and (max-width: 1440px) {
     .card {
         height: 70vh;
+        
+    }
+    #kartya2{
+        background-color: red;
+        width: 50vh !important;
+        height: 50vh !important;
+        transform: scaleX(1.0) !important; /* A szélesség 110%-ra növeli */
+        
+    }
+    #kartya1{
+        background-color: red;
+        transform: scaleX(1.0) !important; /* A szélesség 110%-ra növeli */
+        
     }
 }
 @media only screen and (max-width: 1280px) {
     .card {
         height: 60vh;
+        justify-content: center !important;
+        
     }
+    #kartya2{
+        background-color: red;
+        width: 40vh !important;
+        height: 40vh !important;
+        transform: scaleX(1.0) !important; /* A szélesség 110%-ra növeli */
+        justify-self: center !important;
+        text-align: center !important;
+        justify-self: center !important;
+        
+    }
+    #kartya1{
+        background-color: red;
+        transform: scaleX(1.0) !important; /* A szélesség 110%-ra növeli */
+        width: 40vh !important;
+        height: 40vh !important;
+        transform: scaleX(1.0) !important; /* A szélesség 110%-ra növeli */
+        justify-self: center !important;
+        text-align: center !important;
+        justify-self: center !important;
+    }
+
+}
+
+#kartya2{
+    background-color: red;
+    width: 80vh;
+    height: 50vh;
+    transform: scaleX(1.3); /* A szélesség 110%-ra növeli */
+    
+}
+#kartya1{
+    background-color: red;
+    transform: scaleX(1.3); /* A szélesség 110%-ra növeli */
+    
 }
