--- a/game.css
+++ b/game.css
@@ -355,21 +355,293 @@ main{
     }
   }
 
-  @media only screen and (max-width: 1440px) {
-    .gradient-border {
-      width: 36vh;
-      height: 36vh;
-      margin-left: 63vh;
-    }
+
+
+
+
+
+/*ELLENŐRZÉS GOMB*/
+:root {
+  --glow-color: hsl(186 100% 69%);
+}
+
+.check {
+  position: absolute;
+  right: 15vh;
+  bottom: 25vh;
+  color: var(--glow-color);
+  cursor: pointer;
+  padding: 0.35em 1em;
+  border: 0.15em solid var(--glow-color);
+  border-radius: 0.45em;
+  background: none;
+  perspective: 2em;
+  font-family: "Raleway", sans-serif;
+  font-size: 2em;
+  font-weight: 900;
+  letter-spacing: 1em;
+  
+  
+
+  -webkit-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  -moz-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  animation: border-flicker 2s linear infinite;
+}
+
+.check-txt {
+  float: left;
+  margin-right: -0.8em;
+  -webkit-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.45em var(--glow-color);
+  -moz-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.45em var(--glow-color);
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--glow-color);
+  animation: text-flicker 3s linear infinite;
+}
+
+.faulty-letter {
+  opacity: 0.5;
+  animation: faulty-flicker 2s linear infinite;
+}
+
+.check::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.7;
+  filter: blur(1em);
+  transform: translateY(120%) rotateX(95deg) scale(1, 0.35);
+  background: var(--glow-color);
+  pointer-events: none;
+}
+
+.check::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  z-index: -1;
+  background-color: var(--glow-color);
+  box-shadow: 0 0 2em 0.2em var(--glow-color);
+  transition: opacity 100ms linear;
+}
+
+.check:hover {
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: none;
+  animation: none;
+}
+
+.check:hover .check-txt {
+  animation: none;
+}
+
+.check:hover .faulty-letter {
+  animation: none;
+  text-shadow: none;
+  opacity: 1;
+}
+
+.check:hover:before {
+  filter: blur(1.5em);
+  opacity: 1;
+}
+
+.check:hover:after {
+  opacity: 1;
+}
+
+@keyframes faulty-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 0.1;
+  }
+  4% {
+    opacity: 0.5;
+  }
+  19% {
+    opacity: 0.5;
+  }
+  21% {
+    opacity: 0.1;
+  }
+  23% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0.5;
+  }
+  83% {
+    opacity: 0.4;
+  }
+
+  87% {
+    opacity: 1;
+  }
+}
+
+@keyframes text-flicker {
+  0% {
+    opacity: 0.1;
+  }
+
+  2% {
+    opacity: 1;
+  }
+
+  8% {
+    opacity: 0.1;
+  }
+
+  9% {
+    opacity: 1;
+  }
+
+  12% {
+    opacity: 0.1;
+  }
+  20% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.3;
+  }
+  30% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 0.7;
+  }
+  72% {
+    opacity: 0.2;
+  }
+
+  77% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.9;
+  }
+}
+
+@keyframes border-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 1;
+  }
+  4% {
+    opacity: 0.1;
+  }
+
+  8% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .check-btn{
+    font-size: 1em;
+  }
+}
+
+/*Segítség gomb*/ 
+.help-button {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background-color: #3498db;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 5vh;
+  color: white;
+  left: 12vh;
+  bottom: 5vh;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.tooltip {
+  position: absolute;
+  top: 50%;
+  left: 100%; /* Jobb oldalról induljon az eltolás */
+  transform: translate(10px, -50%);
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  width: 200px;
+  text-align: center;
+  z-index: 1;
+  
+}
+
+.help-button:hover .tooltip {
+  opacity: 4;
+  
+}
+.black{
+  color: black;
+}
+
+@media only screen and (max-width: 1440px) {
+  .gradient-border {
+    width: 36vh;
+    height: 36vh;
+    margin-left: 63vh;
+  }
+  .check{
+    right: 1vh;
+    width: 50vh;
+    font-size: 25px;
+    bottom: 25vh;
+    right: 7vh;
+  }
 }
 @media only screen and (max-width: 1280px) {
-  .gradient-border {
-    width: 31.5vh;
-    height: 31.5vh;
-    margin-left: 50vh;
-    
-  }
-  .logo-container{
-    margin: auto;
-  }
+.gradient-border {
+  width: 31.5vh;
+  height: 31.5vh;
+  margin-left: 50vh;
+  
+}
+.logo-container{
+  margin: auto;
+}
+.help-button{
+  bottom: 13vh;
+}
+.check{
+  right: 1vh;
+  width: 40vh;
+  font-size: 20px;
+  bottom: 12vh;
+}
+
+
 }
