--- a/game.css
+++ b/game.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
-
+/*lOGO ANIMACIO*/
 .text-copy{
     fill: none;
     stroke: rgb(56, 15, 15);
@@ -10,7 +10,7 @@
     animation: stroke-offset 5.5s infinite linear;
     margin-top: -5vh;   
 }
-
+/*Jatek logo itt tartjuk*/
 .logo-container {
 	position: relative;
     margin-bottom: -15vh;
@@ -36,7 +36,7 @@
 	}
 }
 
-
+/*Jatek logo animacio eleme*/
 .text-copy:nth-child(1){
 	stroke: #4D163D;
 	animation-delay: -1;
@@ -62,7 +62,7 @@
 	stroke: #FDB731;
 	animation-delay: -5s;
 }
-
+/*Animaciok innen kezdodnek*/
 @keyframes stroke-offset{
 	100% {stroke-dashoffset: -35%;}
 }
@@ -82,7 +82,7 @@
 	0%, 25% { clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); }
 	50% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); }
 }
-
+/*Animaciok vege*/
 #a1szv{
     text-decoration: none !important;
     color: black !important;
@@ -105,6 +105,7 @@
     left: 50%;
     transform: translateX(-50%);
 }
+/*Body*/
 body{
     overflow: hidden;
     background-color: #423e3e93;
@@ -121,7 +122,7 @@ body{
     50% { opacity: 0; }
     100% { opacity: 1; }
 }
-/**/
+/*kartyak*/
 
 .card-img-top {
     max-width: 50vh !important;
@@ -153,6 +154,7 @@ body{
     
     
 }
+/*main*/
 main{
   margin-top: 15vh;
 }
@@ -180,6 +182,7 @@ main{
   background-color: rgba(245, 0, 151, 0.568);
   cursor: pointer;
 }
+/*Gombok*/
 .Buttons{ 
     justify-content: center; 
     align-items: center; 
@@ -290,7 +293,7 @@ main{
     opacity: 1;
   }
 
-
+/*Keveres gomb*/
   .shuffle {
     position: absolute;
     font-family: sans-serif;
@@ -316,7 +319,7 @@ main{
     opacity: 1;
     transition: opacity linear calc(0.2s + 0.05s);
   }
-  
+  /*Jatek kerete*/
   .gradient-border {
     --border-width: 0.5vh;
     position: relative;
